--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parse-server",
+  "name": "bt-parse-server",
   "version": "2.6.0",
   "description": "An express module providing a Parse-compatible API server",
   "main": "lib/index.js",
